deshabilitado generateGitProperties, cambiada imagen de docker, usando entrypoint